# unicode-segment

./: .gitignore  Makefile  README.md  dprint.json  dprint.jsonc  publish.sh  pyproject.toml
src/: _grapheme_rules.py  _regex_builder.py  _sentence_rules.py  _word_rules.py  grapheme.py  sentence.py  word.py
src/unicode_segment/: __init__.py  _config_builder.py  _grapheme_rules.py  _regex_builder.py  _rule_parser.py  _segmenter.py  _sentence_rules.py  _word_rules.py  grapheme.py  sentence.py  word.py
tests/: _run_segmenter_tests.py  test_bench.py  test_grapheme.py  test_sentence.py  test_word.py  watch.ts
