[project]
name = "unicode-segment"
version = "0.1.0"
description = "Segment text with Unicode TR29-compliant segmenters."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE.txt" }
keywords = ["unicode", "text-segmentation", "segmenter", "tr29", "sentence", "i18n"]
authors = [{ name = "Lionel Rowe", email = "lionel.rowe@gmail.com" }]
maintainers = [{ name = "Lionel Rowe", email = "lionel.rowe@gmail.com" }]
dependencies = [
    "regex>=2025.11.3",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: General",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Software Development :: Localization",
]

[project.optional-dependencies]
dev = []
test = [
    "pytest>=8.4.2",
]

[project.urls]
"Homepage" = "https://github.com/lionel-rowe/unicode-segment"
"Bug Reports" = "https://github.com/lionel-rowe/unicode-segment/issues"
"Source" = "https://github.com/lionel-rowe/unicode-segment/"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
